--- a/covid19_interactiveModAndDA.html
+++ b/covid19_interactiveModAndDA.html
@@ -13383,8 +13383,7 @@ div#notebook {
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="n">interact</span><span class="p">(</span><span class="n">logistic_covid</span><span class="p">,</span> 
          <span class="n">covid19_df</span> <span class="o">=</span> <span class="n">fixed</span><span class="p">(</span><span class="n">Confirmed</span><span class="p">),</span>
-         <span class="n">nation</span> <span class="o">=</span> <span class="n">Dropdown</span><span class="p">(</span><span class="n">options</span><span class="o">=</span><span class="nb">list</span><span class="p">(</span><span class="n">Confirmed</span><span class="o">.</span><span class="n">columns</span><span class="p">),</span> <span class="n">value</span><span class="o">=</span><span class="s1">&#39;Italy&#39;</span><span class="p">)</span>
-        <span class="p">);</span>
+         <span class="n">nation</span> <span class="o">=</span> <span class="n">Dropdown</span><span class="p">(</span><span class="n">options</span><span class="o">=</span><span class="nb">list</span><span class="p">(</span><span class="n">Confirmed</span><span class="o">.</span><span class="n">columns</span><span class="p">),</span> <span class="n">value</span><span class="o">=</span><span class="s1">&#39;Italy&#39;</span><span class="p">));</span>
 </pre></div>
 
     </div>
