--- a/covid19_interactiveModAndDA.html
+++ b/covid19_interactiveModAndDA.html
@@ -13593,13 +13593,30 @@ div#notebook {
 
 <div class="inner_cell">
     <div class="input_area">
-<div class=" highlight hl-ipython3"><pre><span></span><span class="k">def</span> <span class="nf">infectionrate</span><span class="p">(</span><span class="n">Confirmed</span><span class="p">,</span> <span class="n">country</span><span class="p">,</span> <span class="n">return_plot</span> <span class="o">=</span> <span class="kc">True</span><span class="p">,</span> <span class="n">return_df</span><span class="o">=</span><span class="kc">False</span><span class="p">):</span>
+<div class=" highlight hl-ipython3"><pre><span></span><span class="n">Confirmedweeklyrates</span> <span class="o">=</span> <span class="p">(</span><span class="n">Confirmed</span> <span class="o">-</span> <span class="n">Confirmed</span><span class="o">.</span><span class="n">shift</span><span class="p">(</span><span class="mi">1</span><span class="p">,</span> <span class="n">freq</span><span class="o">=</span><span class="n">Week</span><span class="p">())</span><span class="o">.</span><span class="n">reindex</span><span class="p">(</span><span class="n">Confirmed</span><span class="o">.</span><span class="n">index</span><span class="p">))</span><span class="o">.</span><span class="n">fillna</span><span class="p">(</span><span class="n">value</span><span class="o">=</span><span class="mi">0</span><span class="p">)</span>
+</pre></div>
+
+    </div>
+</div>
+</div>
+
+  </div>
+
+  
+
+  <div class="
+      cell border-box-sizing code_cell rendered">
+    <div class="input">
+
+<div class="inner_cell">
+    <div class="input_area">
+<div class=" highlight hl-ipython3"><pre><span></span><span class="k">def</span> <span class="nf">plot_infectionrate</span><span class="p">(</span><span class="n">Confirmedweeklyrates</span><span class="p">,</span> <span class="n">country</span><span class="p">,</span> <span class="n">return_plot</span> <span class="o">=</span> <span class="kc">True</span><span class="p">,</span> <span class="n">return_df</span><span class="o">=</span><span class="kc">False</span><span class="p">):</span>
     <span class="sd">&quot;&quot;&quot;</span>
-<span class="sd">    Confirmed: df adjusted from JHU</span>
+<span class="sd">    Confirmed_rate: rate of infection adjusted from JHU</span>
 <span class="sd">    country: string</span>
 <span class="sd">    &quot;&quot;&quot;</span>
     <span class="n">country</span> <span class="o">=</span> <span class="nb">list</span><span class="p">(</span><span class="n">country</span><span class="p">)</span>
-    <span class="n">res</span> <span class="o">=</span> <span class="p">(</span><span class="n">Confirmed</span><span class="p">[</span><span class="n">country</span><span class="p">]</span> <span class="o">-</span> <span class="n">Confirmed</span><span class="p">[</span><span class="n">country</span><span class="p">]</span><span class="o">.</span><span class="n">shift</span><span class="p">(</span><span class="mi">1</span><span class="p">,</span> <span class="n">freq</span><span class="o">=</span><span class="n">Week</span><span class="p">())</span><span class="o">.</span><span class="n">reindex</span><span class="p">(</span><span class="n">Confirmed</span><span class="p">[</span><span class="n">country</span><span class="p">]</span><span class="o">.</span><span class="n">index</span><span class="p">))</span><span class="o">.</span><span class="n">fillna</span><span class="p">(</span><span class="n">value</span><span class="o">=</span><span class="mi">0</span><span class="p">)</span>
+    <span class="n">res</span> <span class="o">=</span> <span class="n">Confirmed_Wrate</span><span class="p">[</span><span class="n">country</span><span class="p">]</span>
     <span class="k">if</span> <span class="n">return_plot</span> <span class="ow">is</span> <span class="kc">True</span><span class="p">:</span>
         <span class="n">res</span><span class="o">.</span><span class="n">plot</span><span class="p">()</span>
     <span class="k">if</span> <span class="n">return_df</span> <span class="ow">is</span> <span class="kc">True</span><span class="p">:</span>
@@ -13620,7 +13637,7 @@ div#notebook {
 
 <div class="inner_cell">
     <div class="input_area">
-<div class=" highlight hl-ipython3"><pre><span></span><span class="k">def</span> <span class="nf">loglog_covid</span><span class="p">(</span><span class="n">Confirmed</span><span class="p">,</span> <span class="n">countries</span><span class="p">):</span>
+<div class=" highlight hl-ipython3"><pre><span></span><span class="k">def</span> <span class="nf">loglog_covid</span><span class="p">(</span><span class="n">Confirmedweeklyrates</span><span class="p">,</span> <span class="n">countries</span><span class="p">):</span>
     <span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    Confirmed: df adjustedc from JHU</span>
 <span class="sd">    countries: list in columns of Confirmed</span>
@@ -13628,9 +13645,9 @@ div#notebook {
 <span class="sd">    &quot;&quot;&quot;</span>
     <span class="n">fig</span><span class="p">,</span> <span class="n">axes</span> <span class="o">=</span> <span class="n">plt</span><span class="o">.</span><span class="n">subplots</span><span class="p">(</span><span class="n">figsize</span><span class="o">=</span><span class="p">(</span><span class="mi">15</span><span class="p">,</span><span class="mi">8</span><span class="p">))</span>
     
-    <span class="n">df</span> <span class="o">=</span> <span class="n">infectionrate</span><span class="p">(</span><span class="n">Confirmed</span><span class="p">,</span> <span class="n">countries</span><span class="p">,</span> <span class="n">return_plot</span><span class="o">=</span><span class="kc">False</span><span class="p">,</span> <span class="n">return_df</span><span class="o">=</span><span class="kc">True</span><span class="p">)</span>
+    <span class="n">df</span> <span class="o">=</span> <span class="n">infectionrate</span><span class="p">(</span><span class="n">Confirmedweeklyrates</span><span class="p">,</span> <span class="n">countries</span><span class="p">,</span> <span class="n">return_plot</span><span class="o">=</span><span class="kc">False</span><span class="p">,</span> <span class="n">return_df</span><span class="o">=</span><span class="kc">True</span><span class="p">)</span>
 
-    <span class="n">axes</span><span class="o">.</span><span class="n">loglog</span><span class="p">(</span><span class="n">Confirmed</span><span class="o">.</span><span class="n">sum</span><span class="p">(</span><span class="n">axis</span><span class="o">=</span><span class="mi">1</span><span class="p">),</span> <span class="n">df</span><span class="o">.</span><span class="n">values</span><span class="p">,</span> <span class="s1">&#39;o&#39;</span><span class="p">)</span>
+    <span class="n">axes</span><span class="o">.</span><span class="n">loglog</span><span class="p">(</span><span class="n">Confirmedweeklyrates</span><span class="o">.</span><span class="n">sum</span><span class="p">(</span><span class="n">axis</span><span class="o">=</span><span class="mi">1</span><span class="p">),</span> <span class="n">df</span><span class="o">.</span><span class="n">values</span><span class="p">,</span> <span class="s1">&#39;o&#39;</span><span class="p">)</span>
     <span class="n">axes</span><span class="o">.</span><span class="n">legend</span><span class="p">(</span><span class="n">countries</span><span class="p">)</span>
     <span class="n">axes</span><span class="o">.</span><span class="n">set_title</span><span class="p">(</span><span class="s1">&#39;Loglog&#39;</span><span class="p">)</span>
     <span class="n">axes</span><span class="o">.</span><span class="n">set_ylabel</span><span class="p">(</span><span class="s1">&#39;Weekly increase of positive cases&#39;</span><span class="p">)</span>
@@ -13665,9 +13682,9 @@ div#notebook {
 
 <div class="inner_cell">
     <div class="input_area">
-<div class=" highlight hl-ipython3"><pre><span></span><span class="n">interact</span><span class="p">(</span><span class="n">infectionrate</span><span class="p">,</span>
-         <span class="n">Confirmed</span> <span class="o">=</span> <span class="n">fixed</span><span class="p">(</span><span class="n">Confirmed</span><span class="p">),</span>
-         <span class="n">country</span> <span class="o">=</span> <span class="n">SelectMultiple</span><span class="p">(</span><span class="n">options</span><span class="o">=</span><span class="nb">list</span><span class="p">(</span><span class="n">Confirmed</span><span class="o">.</span><span class="n">columns</span><span class="p">),</span> <span class="n">value</span><span class="o">=</span><span class="p">[</span><span class="s1">&#39;Belgium&#39;</span><span class="p">,</span> <span class="s1">&#39;Italy&#39;</span><span class="p">,</span> <span class="s1">&#39;Spain&#39;</span><span class="p">,</span> <span class="s1">&#39;US&#39;</span><span class="p">],</span>
+<div class=" highlight hl-ipython3"><pre><span></span><span class="n">interact</span><span class="p">(</span><span class="n">plot_infectionrate</span><span class="p">,</span>
+         <span class="n">Confirmedweeklyrates</span> <span class="o">=</span> <span class="n">fixed</span><span class="p">(</span><span class="n">Confirmedweeklyrates</span><span class="p">),</span>
+         <span class="n">country</span> <span class="o">=</span> <span class="n">SelectMultiple</span><span class="p">(</span><span class="n">options</span><span class="o">=</span><span class="nb">list</span><span class="p">(</span><span class="n">Confirmedweeklyrates</span><span class="o">.</span><span class="n">columns</span><span class="p">),</span> <span class="n">value</span><span class="o">=</span><span class="p">[</span><span class="s1">&#39;Belgium&#39;</span><span class="p">,</span> <span class="s1">&#39;Italy&#39;</span><span class="p">,</span> <span class="s1">&#39;Spain&#39;</span><span class="p">,</span> <span class="s1">&#39;US&#39;</span><span class="p">],</span>
                                   <span class="n">description</span><span class="o">=</span><span class="s1">&#39;Select country(ies)&#39;</span><span class="p">,</span>
                                   <span class="n">style</span> <span class="o">=</span> <span class="p">{</span><span class="s1">&#39;description_width&#39;</span><span class="p">:</span> <span class="s1">&#39;initial&#39;</span><span class="p">},</span>
                                   <span class="n">layout</span><span class="o">=</span><span class="n">Layout</span><span class="p">(</span><span class="n">width</span><span class="o">=</span><span class="s1">&#39;40%&#39;</span><span class="p">,</span> <span class="n">height</span><span class="o">=</span><span class="s1">&#39;100px&#39;</span><span class="p">)),</span>
@@ -13731,7 +13748,7 @@ div#notebook {
 <div class="inner_cell">
     <div class="input_area">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="n">interact</span><span class="p">(</span><span class="n">loglog_covid</span><span class="p">,</span>
-         <span class="n">Confirmed</span> <span class="o">=</span> <span class="n">fixed</span><span class="p">(</span><span class="n">Confirmed</span><span class="p">),</span>
+         <span class="n">Confirmedweeklyrates</span> <span class="o">=</span> <span class="n">fixed</span><span class="p">(</span><span class="n">Confirmedweeklyrates</span><span class="p">),</span>
          <span class="n">countries</span> <span class="o">=</span> <span class="n">SelectMultiple</span><span class="p">(</span><span class="n">options</span><span class="o">=</span><span class="nb">list</span><span class="p">(</span><span class="n">Confirmed</span><span class="o">.</span><span class="n">columns</span><span class="p">),</span> <span class="n">value</span><span class="o">=</span><span class="p">[</span><span class="s1">&#39;Belgium&#39;</span><span class="p">,</span> <span class="s1">&#39;Italy&#39;</span><span class="p">,</span> <span class="s1">&#39;Spain&#39;</span><span class="p">,</span> <span class="s1">&#39;US&#39;</span><span class="p">],</span>
                                  <span class="n">description</span><span class="o">=</span><span class="s1">&#39;Select countries (Ctrl+ for multi-selection)&#39;</span><span class="p">,</span> 
                                     <span class="n">style</span> <span class="o">=</span> <span class="p">{</span><span class="s1">&#39;description_width&#39;</span><span class="p">:</span> <span class="s1">&#39;initial&#39;</span><span class="p">},</span>
@@ -13780,7 +13797,7 @@ div#notebook {
 
 <div class="inner_cell">
     <div class="input_area">
-<div class=" highlight hl-ipython3"><pre><span></span><span class="n">Confirmedweeklyrates</span> <span class="o">=</span> <span class="n">infectionrate</span><span class="p">(</span><span class="n">Confirmed</span><span class="p">,</span> <span class="n">Confirmed</span><span class="o">.</span><span class="n">columns</span><span class="p">,</span> <span class="n">return_plot</span><span class="o">=</span><span class="kc">False</span><span class="p">,</span> <span class="n">return_df</span><span class="o">=</span><span class="kc">True</span><span class="p">)</span>
+<div class=" highlight hl-ipython3"><pre><span></span><span class="n">Confirmedweeklyrates</span> <span class="o">=</span> <span class="p">(</span><span class="n">Confirmed</span> <span class="o">-</span> <span class="n">Confirmed</span><span class="o">.</span><span class="n">shift</span><span class="p">(</span><span class="mi">1</span><span class="p">,</span> <span class="n">freq</span><span class="o">=</span><span class="n">Week</span><span class="p">())</span><span class="o">.</span><span class="n">reindex</span><span class="p">(</span><span class="n">Confirmed</span><span class="o">.</span><span class="n">index</span><span class="p">))</span><span class="o">.</span><span class="n">fillna</span><span class="p">(</span><span class="n">value</span><span class="o">=</span><span class="mi">0</span><span class="p">)</span>
 </pre></div>
 
     </div>
