--- a/covid19_interactSIR.html
+++ b/covid19_interactSIR.html
@@ -13127,7 +13127,7 @@ div#notebook {
 </div>
 <div class="cell border-box-sizing text_cell rendered"><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>Try to fir the SIR model to the cases of a specific country and compare it to the logistic model</p>
+<p>Try to fit the SIR model to the cases of a specific country and compare it to the logistic model</p>
 
 </div>
 </div>
